--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class = "content">
   <h1>Bank Account Ballance</h1>
   <button>Display Random Ballance</button>
-  <p class = "display"></p>
+  <h1 class = "account"></h1>
 </div>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="./scripts.js"></script>
